# rulegate

./: .gitignore  LICENSE  README.md  SEMANTICS.md  bench_rulegate.py  pyproject.toml
rulegate/: __init__.py  core.py  emitter.py  engine.py  store.py
schemas/: rulegate-decision.schema.json
tests/: test_async.py  test_rulegate.py
